tests/error/result_errors/state_result_missing_tag.err
Error: Type mismatch (at $FILE:8:17)
  | 
6 | def main() -> None:
7 |     q1 = qubit()
8 |     state_result(q1)
  |                  ^^ Expected expression of type `str`, got `qubit`

Guppy compilation failed due to 1 previous error
